<project xmlns="http://maven.apache.org/POM/4.0.0"
			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.skyve</groupId>
	<artifactId>skyve-parent</artifactId>
	<version>8.3.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>skyve-core</module>
		<module>skyve-ext</module>
		<module>skyve-ear</module>
		<module>skyve-ee</module>
		<module>skyve-war</module>
		<module>skyve-web</module>
		<module>skyve-content</module>
		<module>skyve-tools</module>
		<module>skyve-ejb</module>
		<module>skyve-maven-plugin</module>
	</modules>

	<properties>
		<skyve.version>${project.version}</skyve.version>
		<asm.version>5.0.4</asm.version>
		<browscap.version>1.3.1</browscap.version>
		<!-- Keep this in lock step with hibernate (mockito and selenium aren't critical) -->
		<byte-buddy.version>1.11.12</byte-buddy.version>
		<commonmark.version>0.10.0</commonmark.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-codec.version>1.15</commons-codec.version>
		<commons-fileupload.version>1.5</commons-fileupload.version>
		<commons-io.version>2.11.0</commons-io.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<commons-text.version>1.10.0</commons-text.version>
		<commons-validator.version>1.7</commons-validator.version>
		<deltaspike-core.version>1.8.0</deltaspike-core.version>
		<ehcache.version>3.9.0</ehcache.version>
		<geodb.version>0.9</geodb.version>
		<gson.version>2.8.9</gson.version>
		<!-- required for >= java 9 and even though geodb 0.9 depends on 1.0.b10, it still works with this version -->
		<hatbox.version>1.0.b11</hatbox.version>
		<h2.version>1.3.173</h2.version>
		<hibernate.version>5.4.33.Final</hibernate.version>
		<hibernate-entitymanager.version>5.4.33.Final</hibernate-entitymanager.version>
		<hibernate-spatial.version>5.4.33.Final</hibernate-spatial.version>
		<ireport.version>4.7.0</ireport.version>
		<groovy.version>2.3.2</groovy.version>
		<jasperreports.version>6.20.5</jasperreports.version>
		<java.version>11</java.version>
		<javassist.version>3.20.0-GA</javassist.version>
		<javaee-api.version>7.0</javaee-api.version>
		<jts.version>1.16.1</jts.version>
		<lucene.version>9.7.0</lucene.version>
		<omnifaces.version>2.7.1</omnifaces.version>
		<owasp.encoder.version>1.2.3</owasp.encoder.version>
		<owasp.html.sanitizer.version>20200713.1</owasp.html.sanitizer.version>
		<owasp.json.sanitizer.version>[1.0,)</owasp.json.sanitizer.version>
		<pdfbox.version>1.8.4</pdfbox.version>
		<pf4j.version>3.10.0</pf4j.version>
		<poi.version>5.2.3</poi.version>
		<primefaces.version>12.0.0</primefaces.version>
		<primefaces-extensions.version>12.0.7</primefaces-extensions.version>
		<primefaces-allthemes.version>1.0.10</primefaces-allthemes.version>
		<quartz.version>2.3.2</quartz.version>
		<slf4j-api.version>1.7.32</slf4j-api.version>
		<spatial4j.version>0.4.1</spatial4j.version>
		<super-csv.version>2.4.0</super-csv.version>
		<thumbnailator.version>0.4.8</thumbnailator.version>
		<tika.version>2.8.0</tika.version>
		<umlgraph.version>5.6.6</umlgraph.version>
		<xmlschema-core.version>2.0.1</xmlschema-core.version>
		<generex.version>1.0.2</generex.version>
		<junidecode.version>0.4.1</junidecode.version>
		<junit.version>4.13.1</junit.version>
		<junit-jupiter.version>5.7.1</junit-jupiter.version>
		<mockito.version>2.28.2</mockito.version>
		<hamcrest.version>1.3</hamcrest.version>
		<weld-se.version>2.4.4.Final</weld-se.version>
		<spring-security.version>5.8.5</spring-security.version>
		<spring.version>5.3.29</spring.version>
		<reactive-streams.version>1.0.2</reactive-streams.version>
		<!-- freemarker report versions -->
		<flying-saucer.version>9.1.22</flying-saucer.version>
		<freemarker.version>2.3.29</freemarker.version>
		<cronutils.version>9.1.6</cronutils.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<distributionManagement>
		<repository>
			<id>skyve</id>
			<url>https://repo.skyve.org/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>skyve</id>
			<url>https://repo.skyve.org/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<pluginManagement>
			<plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Djava.locale.providers=COMPAT,CLDR </argLine>
                    </configuration>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<forceJavacCompilerUse>true</forceJavacCompilerUse>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
        <repository>
            <id>maven2</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>oss.sonatype.org</id>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>Prime Faces</id>
            <url>https://repository.primefaces.org</url>
        </repository>
        <repository>
            <id>boundlessgeo</id>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
		<repository>
			<id>skyve</id>
			<url>https://repo.skyve.org/repository/skyve/</url>
		</repository>
		<repository>
			<id>jaspersoft-third-party</id>
			<url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>skyve</id>
			<url>https://repo.skyve.org/repository/skyve/</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>${javaee-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons-text.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-validator</groupId>
				<artifactId>commons-validator</artifactId>
				<version>${commons-validator.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>net.coobird</groupId>
				<artifactId>thumbnailator</artifactId>
				<version>${thumbnailator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>${ehcache.version}</version>
			</dependency>
			<dependency>
				<groupId>com.atlassian.commonmark</groupId>
				<artifactId>commonmark</artifactId>
				<version>${commonmark.version}</version>
			</dependency>
			<dependency>
				<groupId>com.blueconic</groupId>
				<artifactId>browscap-java</artifactId>
				<version>${browscap.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.mifmif</groupId>
				<artifactId>generex</artifactId>
				<version>${generex.version}</version>
			</dependency>
			<dependency>
				<groupId>net.gcardone.junidecode</groupId>
				<artifactId>junidecode</artifactId>
				<version>${junidecode.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>${hibernate-entitymanager.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-spatial</artifactId>
				<version>${hibernate-spatial.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-jcache</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>${asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-commons</artifactId>
				<version>${asm.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm-tree</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- Set for hibernate use here to stop conflicts in mockito and selenium etc -->
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${byte-buddy.version}</version>
				<scope>compile</scope>
				<exclusions>
					<exclusion>
						<artifactId>xml-apis</artifactId>
						<groupId>xml-apis</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>${groovy.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.jasperreports</groupId>
				<artifactId>jasperreports</artifactId>
				<version>${jasperreports.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.commons</groupId>
						<artifactId>commons-collections4</artifactId>
					</exclusion>
					<exclusion>
						<groupId>commons-digester</groupId>
						<artifactId>commons-digester</artifactId>
					</exclusion>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.primefaces.themes</groupId>
				<artifactId>all-themes</artifactId>
				<version>${primefaces-allthemes.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<version>${primefaces.version}</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces.extensions</groupId>
				<artifactId>primefaces-extensions</artifactId>
				<version>${primefaces-extensions.version}</version>
			</dependency>
			<dependency>
				<groupId>org.omnifaces</groupId>
				<artifactId>omnifaces</artifactId>
				<version>${omnifaces.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-codec</groupId>
						<artifactId>commons-codec</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.spatial4j</groupId>
				<artifactId>spatial4j</artifactId>
				<version>${spatial4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ws.xmlschema</groupId>
				<artifactId>xmlschema-core</artifactId>
				<version>${xmlschema-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.locationtech.jts</groupId>
				<artifactId>jts-core</artifactId>
				<version>${jts.version}</version>
			</dependency>
			<!-- remove this dependency when geodb depends on at least 1.0.b11 (which is java 9 module friendly) -->
			<dependency>
				<groupId>net.sourceforge.hatbox</groupId>
				<artifactId>hatbox</artifactId>
				<version>${hatbox.version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.deltaspike.core</groupId>
				<artifactId>deltaspike-core-api</artifactId>
				<version>${deltaspike-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-web</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-client</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-jose</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pf4j</groupId>
				<artifactId>pf4j</artifactId>
				<version>${pf4j.version}</version>
			</dependency>
			<!-- html reports and html to pdf conversion -->
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${freemarker.version}</version>
			</dependency>
			<dependency>
				<groupId>org.xhtmlrenderer</groupId>
				<artifactId>flying-saucer-pdf-openpdf</artifactId>
				<version>${flying-saucer.version}</version>
				<exclusions>
					<exclusion>
						<groupId>com.github.librepdf</groupId>
						<artifactId>openpdf</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.cronutils</groupId>
				<artifactId>cron-utils</artifactId>
				<version>${cronutils.version}</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>${junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>${hamcrest.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
	    		<groupId>org.jboss.weld.se</groupId>
	    		<artifactId>weld-se</artifactId>
	    		<version>${weld-se.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Runtime dependencies -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j-api.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j-api.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.opengeo</groupId>
				<artifactId>geodb</artifactId>
				<version>${geodb.version}</version>
				<scope>runtime</scope>
				<!-- Excluded in favour of 1.0.b11 which is java 9 module friendly) -->
				<exclusions>
					<exclusion>
						<groupId>net.sourceforge.hatbox</groupId>
						<artifactId>hatbox</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.sf.supercsv</groupId>
				<artifactId>super-csv</artifactId>
				<version>2.4.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-schemas</artifactId>
				<version>${poi.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-scratchpad</artifactId>
				<version>${poi.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>net.sf.qualitycheck</groupId>
				<artifactId>quality-check</artifactId>
				<version>1.3</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>rome</groupId>
				<artifactId>rome</artifactId>
				<version>0.9</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>wsdl4j</groupId>
				<artifactId>wsdl4j</artifactId>
				<version>1.6.2</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.tukaani</groupId>
				<artifactId>xz</artifactId>
				<version>1.2</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.reactivestreams</groupId>
				<artifactId>reactive-streams</artifactId>
				<version>${reactive-streams.version}</version>
				<scope>runtime</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
